fix alignment

--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ input[type="submit"] {
 .profile-circular {
     background: url('/img/profile-picture.jpeg');
     background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
     height: 250px;
     width: 250px;
     border-radius: 50% 50% 50% 50%; 
